--- a/app/src/main/res/layout/item_oficios.xml
+++ b/app/src/main/res/layout/item_oficios.xml
@@ -21,26 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:autoSizeMaxTextSize="18dp"
-            app:fontFamily="sans-serif"
             android:textStyle="bold"
-
-            >
+            android:textSize="21sp"
+            app:autoSizeTextType="none"
+            app:fontFamily="sans-serif">
 
         </TextView>
 
-        <TextView
-            android:id="@+id/tvJornada"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:autoSizeMaxTextSize="17dp"
-            app:fontFamily="sans-serif"
-            android:textStyle="bold"
-
-            >
-
-        </TextView>
 
     </LinearLayout>
 
