--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -2,37 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="389dp"
     android:background="@drawable/stylo_bordes2"
-    android:orientation="horizontal"
+    android:orientation="vertical"
+
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        >
 
         <TextView
-            android:id="@+id/tvTrabajos"
+
+            android:id="@+id/tvCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#C51010"
-            android:paddingTop="28dp"
             android:layout_gravity="center"
-            android:textStyle="bold"
+            android:layout_marginTop="160dp"
+            android:textColor="#C51010"
             android:textSize="21sp"
-            app:autoSizeTextType="none"
-            app:fontFamily="sans-serif">
+            android:textStyle="bold"
+            >
 
         </TextView>
 
-
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
