--- a/app/src/main/res/drawable-v24/stylo_bordes2.xml
+++ b/app/src/main/res/drawable-v24/stylo_bordes2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid android:color = "#F0F3D849"></solid>
+<solid android:color = "#05F839"></solid>
     <stroke
         android:width="1sp"
         android:color="#06070C" />
