--- a/app/src/main/res/drawable-v24/stylo_bordes3.xml
+++ b/app/src/main/res/drawable-v24/stylo_bordes3.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid android:color = "#FFD740"></solid>
+<solid android:color = "#BBFA04"></solid>
     <stroke
         android:width="1sp"
-        android:color="#090909" />
+        android:color="#06070C" />
     <padding
         android:bottom="10sp"
         android:left="10sp"
